--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DESA TEC | Soluciones de Software Confiables</title>
   <meta name="description" content="Desarrollo de software a medida, sitios web y consultoría tecnológica con un enfoque clásico y confiable." />
+  <meta name="google-site-verification" content="7p2s9PbYEnSgO8OrXYGkUufdmvZGFE-VEWL9RCJ8BWg" />
   <meta name="keywords" content="software, desarrollo, sistemas, consultoría, Paraguay, web" />
-  <meta name="author" content="DESA TEC" />
+  <meta name="author" content="Francisco Ferreira" />
 
   <link rel="icon" href="assets/favicon.png" />
 
